--- a/index.html
+++ b/index.html
@@ -441,7 +441,6 @@
 <script>
   
   
-  
   const promoCodes = {
     "admin222": 20,
     "grif50": 50,
@@ -696,22 +695,8 @@ function renderDonates(mode) {
         text += `|PROMO:${promoInput.value.trim()}`;
       }
 
-       document.getElementById('payBtn').onclick = function() {
-      const nick = document.getElementById('nick').value.trim();
-      const product = document.getElementById('product').value.trim();
-      const quantity = document.getElementById('quantity').value.trim() || "1";
-      const amount = document.getElementById('amount').value.trim();
-
-      if (!nick || !product || !amount) {
-        alert('Заповніть усі поля!');
-        return;
-      }
-
-      const comment = `${nick}|${product}|${quantity}`;
-      const monobankUrl = `https://send.monobank.ua/jar/3NFVTVCMp?amount=${amount}&text=${encodeURIComponent(comment)}`;
-
+      const monobankUrl = `https://send.monobank.ua/jar/3NFVTVCMp?amount=${amount}&text=${encodeURIComponent(text)}`;
       window.open(monobankUrl, "_blank");
-    };
 
       document.body.removeChild(modalOverlay);
     });
@@ -757,16 +742,12 @@ function renderDonates(mode) {
     });
   });
 
-    modalBuyBtn.addEventListener("click", () => {
-  const nick = modalNick.value.trim();
-  if (!nick) {
-    modalError.style.display = "block";
-    modalNick.focus();
-    return;
-  }
+    modalBuyBtn.addEventListener("click", () => { 
+  
   modalError.style.display = "none";
 
-  let text = `${nick}|${currentItem.data.name}`;
+  let text = `${nick.trim()}|${currentItem.data.name}`;
+
   let amount = 0;
 
   if(type === 'case') {
